examples/test/testpolicy11105.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11105
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key3: value44
      key28: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value6
          key43: value47
          key19: value38
      podSelector:
        matchLabels:
          key15: value12
